Bug 235687 ATK menu hierarchy is missing most menu items r=louie.zhao, sr=henry.jia set menugenerated="true" when look up the child of a xul menu item